# advent-of-code

./: .gitignore  Cargo.toml
2023/rust/: Cargo.toml  justfile
2023/rust/daily-template/: Cargo.toml
2023/rust/daily-template/src/: part1.rs  part2.rs
2023/rust/day-01/: Cargo.toml
2023/rust/day-02/: Cargo.toml
2023/rust/day-02/src/: lib.rs
2023/rust/day-03/: Cargo.toml
2023/rust/day-03/src/: lib.rs
2023/rust/day-04/: Cargo.toml
2023/rust/day-04/src/: lib.rs
2023/rust/day-05/: Cargo.toml
2023/rust/day-05/src/: lib.rs
2023/rust/day-06/: Cargo.toml
2023/rust/day-06/src/: lib.rs
2023/rust/day-07/: Cargo.toml
2023/rust/day-08/: Cargo.toml
2023/rust/day-09/: Cargo.toml
2023/rust/day-10/: Cargo.toml
2023/rust/day-11/: Cargo.toml
2023/rust/day-11/src/: lib.rs
2023/rust/day-12/: Cargo.toml
2023/rust/day-12-dfa/: Cargo.toml
2023/rust/day-13/: Cargo.toml
2023/rust/day-14/: Cargo.toml
2023/rust/day-15/: Cargo.toml
2023/rust/day-15/src/: part1.rs  part2.rs
2023/rust/day-16/: Cargo.toml
2023/rust/day-17/: Cargo.toml
2023/rust/day-18/: Cargo.toml
2023/rust/day-19/: Cargo.toml
2023/rust/day-20/: Cargo.toml
2023/rust/day-21/: Cargo.toml
2023/rust/day-22/: Cargo.toml
2023/rust/day-23/: Cargo.toml
2023/rust/day-24/: Cargo.toml  solve.py
2023/rust/day-25/: Cargo.toml
2023/rust/scripts/: get-aoc-input.rs
2024/rust/: Cargo.toml  justfile
2024/rust/daily-template/: Cargo.toml
2024/rust/daily-template/src/: part1.rs  part2.rs
2024/rust/day-01/: Cargo.toml
2024/rust/day-01/src/: part1.rs  part2.rs
2024/rust/day-02/: Cargo.toml
2024/rust/day-02/src/: part1.rs  part2.rs
2024/rust/day-03/: Cargo.toml
2024/rust/day-03/src/: part1.rs  part2.rs
2024/rust/day-04/: Cargo.toml
2024/rust/day-04/src/: part1.rs  part2.rs
2024/rust/day-05/: Cargo.toml
2024/rust/day-05/src/: part1.rs  part2.rs
2024/rust/day-06/: Cargo.toml
2024/rust/day-06/src/: part1.rs  part2.rs
2024/rust/day-07/: Cargo.toml
2024/rust/day-07/src/: part1.rs  part2.rs
2024/rust/day-08/: Cargo.toml
2024/rust/day-08/src/: part1.rs  part2.rs
2024/rust/day-09/: Cargo.toml
2024/rust/day-09/src/: part1.rs  part2.rs
2024/rust/day-10/: Cargo.toml
2024/rust/day-10/src/: part1.rs  part2.rs
2024/rust/day-11/: Cargo.toml
2024/rust/day-11/src/: part1.rs  part2.rs
2024/rust/day-12/: Cargo.toml
2024/rust/day-12/src/: part1.rs  part2.rs
2024/rust/day-13/: Cargo.toml
2024/rust/day-13/src/: part1.rs  part2.rs
2024/rust/day-14/: Cargo.toml
2024/rust/day-14/src/: part1.rs  part2.rs
2024/rust/day-15/: Cargo.toml
2024/rust/day-15/src/: part1.rs  part2.rs
2024/rust/day-16/: Cargo.toml
2024/rust/day-16/src/: part1.rs  part2.rs
2024/rust/day-17/: Cargo.toml
2024/rust/day-17/src/: part1.rs  part2.rs
2024/rust/day-18/: Cargo.toml
2024/rust/day-18/src/: part1.rs  part2.rs
2024/rust/day-19/: Cargo.toml
2024/rust/day-19/src/: part1.rs  part2.rs
2024/rust/day-20/: Cargo.toml
2024/rust/day-20/src/: part1.rs  part2.rs
2024/rust/day-21/: Cargo.toml
2024/rust/day-21/src/: part1.rs  part2.rs
2024/rust/day-22/: Cargo.toml
2024/rust/day-22/src/: part1.rs  part2.rs
2024/rust/day-23/: Cargo.toml
2024/rust/day-23/src/: part1.rs  part2.rs
2024/rust/day-24/: Cargo.toml  graph0.dot  graph1.dot  graph2.dot  graph3.dot  swaps.txt
2024/rust/day-24/src/: part1.rs  part2.rs
2024/rust/day-25/: Cargo.toml
2024/rust/day-25/src/: lib.rs  part1.rs  part2.rs
2024/rust/scripts/: get-aoc-input.rs
(+28 files in other folders)
