[workspace]
resolver = "2"
members = ["*/rust/day-*"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
indicatif = { version = "0.17.7", features = ["rayon"] }
rayon = "1.8.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
glam = "0.24.2"
petgraph = "0.6.4"
itertools = "0.12.0"
sha2 = "0.10.8"
