[workspace]
resolver = "2"

members = ["day-*"]
default-members = ["day-*"]

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.dependencies]
indicatif = { version = "0.17.9", features = ["rayon"] }
rayon = "1.10.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
glam = "0.29.2"
ndarray = "0.16.1"
ndarray-linalg = { version = "0.16.0", features = ["openblas-static"] }
petgraph = "0.6.5"
rustworkx-core = "0.15.1"
itertools = "0.13.0"
sha2 = "0.10.8"
miette = { version = "7.4.0", features = ["fancy"] }
thiserror = "2.0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
test-log = { version = "0.2.16", default-features = false, features = [
    "trace",
] }
pathfinding = "4.11.0"
rstest = "0.23.0"
num = "0.4.3"
cached = "0.54.0"
