[package]
name = "day-05"
version = "0.1.0"
edition = "2021"
authors = ["Rob Mora <romogo17@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { workspace = true }
rayon = { workspace = true }

[lints]
workspace = true
