[package]
name = "day-11"
version = "0.1.0"
edition = "2021"
authors = ["Rob Mora <romogo17@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { workspace = true }
nom-supreme = { workspace = true }
nom_locate = { workspace = true }
glam = { workspace = true }
itertools = { workspace = true }

[lints]
workspace = true
