[package]
name = "day-15"
version = "0.1.0"
edition = "2021"
authors = ["Rob Mora <romogo17@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { workspace = true }
rayon = { workspace = true }
nom = { workspace = true }
nom-supreme = { workspace = true }
nom_locate = { workspace = true }
glam = { workspace = true }
petgraph = { workspace = true }
itertools = { workspace = true }
sha2 = { workspace = true }
miette = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
